2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reduce support to function calls only.

	The previous changes would also rewrite calls to the divide
	routines; but this is not needed any more since the decision was
	made separately to implement a hardware integer divide instead.
	
	* tools/bin/spp: Reinstate the use of t10 and t11 for parameter
	passing.

	* tools/lib/t-pppalpha/include/sl_support.h: Lower the maximum
	number of locals again.

2009-08-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Preliminary support for rewriting function calls in assembly.
	
	* tools/bin/spp,
	* tools/lib/mtalpha-sim/callgate.s,
	* tools/lib/t-pppalpha/include/sl_support.h: New features.

2009-08-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix script `slenv'.
	
	* deploy/slenv: Fix shell detection. Allow local configuration to
	add stuff as well.

2009-08-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Packaging fix.

	* tools/lib/mtalpha.mk,
	* tools/lib/seqc.mk: Distribute more source files.
	
2009-08-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Allow programs to override `main'.

	* tools/lib/mtalpha-sim/slrt.s: Jump to `main', not `t_main'.
	
	* tools/lib/mtalpha-sim/main.c: Implement `main' as a create of a
	family of one thread running `t_main'.

	* tools/lib/host-host-seqc/load.c: Encapsulate data loads in
	function `svp_start'.

	* tools/lib/host-host-seqc/slrt.c: Move `main' function to...	
	* tools/lib/host-host-seqc/main.c: ... here, and implement as a
	call to `svp_start'.
	
	* tools/lib/mtalpha.mk,
	* tools/lib/ptl.mk,	
	* tools/lib/seqc.mk: Update accordingly. Bundle `main.c' in
	`-lslc', so that it gets picked up by the linker unless the
	program overrides main.

	* tools/bin/cce.in: Link with -lslc always.

2009-08-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Sanitize the user interface.
	
	Rename the environment variables that override external tool
	locations to names ending with `_OVERRIDE'. This allows working in