@@ -1,5 +1,15 @@
 2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	More support for function calls.
+	
+	* tools/bin/spp: Try hard to avoid spilling "preserved" registers
+	to the frame. Try harder to remove frame setup and restore upon
+	end of thread.
+
+	* tools/lib/t-pppalpha/slimpl.m4: Pass function calls directly.
+	
+2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Reduce support to function calls only.
 
 	The previous changes would also rewrite calls to the divide
